src/test/ui/borrowck/borrowck-loan-of-static-data-issue-27616.stderr
error[E0506]: cannot assign to `*s` because it is borrowed
  --> $DIR/borrowck-loan-of-static-data-issue-27616.rs:16:5
   |
LL |     let alias: &'static mut String = s;
   |                -------------------   - borrow of `*s` occurs here
   |                |
   |                type annotation requires that `*s` is borrowed for `'static`
...
LL |     *s = String::new();
   |     ^^ assignment to borrowed `*s` occurs here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0506`.
